Fix mobile overflow

--- a/app/less/global.less
+++ b/app/less/global.less
@@ -55,6 +55,10 @@ svg {
     padding-left: 1rem;
 }
 
+.customMessage {
+    font-size: 18px;
+}
+
 @media (max-width: 43em) {
     .xsm-h1 {
         font-size: 28px;
@@ -95,6 +99,10 @@ svg {
         text-align: center;
         margin: 0 auto;
         padding-top: 20px;
+    }
+
+    .customMessage {
+        font-size: 14px;
     }
 
     // Loading component
